<resources>
    <string name="app_name">Texter Messenger</string>
    <string name="start_now">Start now</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_texter">Welcome to texter</string>
    <string name="enjoy_free_messaging_and_calling_with_your_family_and_friends_with_end_to_end_encryption">Enjoy Free messaging and calling with your family and friends with end-to-end encryption</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="we_ve_sent_on_sms_to_your_phone_number">We\'ve sent on SMS to your phone number</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="register_btn">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="please_enter_your_number_to_create_a_new_texter_accout">Please enter your number to create a new texter accout</string>
    <string name="continue1">Continue</string>
</resources>