<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/text1_id"
        android:src="@drawable/messenger"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1_id"
        android:text="@string/welcome_to_texter"
        android:layout_above="@+id/text2_id"
        android:layout_marginVertical="20dp"
        android:textColor="#cccccc"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="35sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text2_id"
        android:text="@string/enjoy_free_messaging_and_calling_with_your_family_and_friends_with_end_to_end_encryption"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:lineSpacingExtra="1mm"
        android:textColor="#8579cc"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:ignore="InOrMmUsage" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_now"
        android:id="@+id/start_btn_id"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColorHint="#3b24cc"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        />


</RelativeLayout>