<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".entercode_Activity2">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="#6D59EA"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/we_ve_sent_on_sms_to_your_phone_number"
        android:textColor="#B6B5B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gettext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otp_cid"
            android:background="@color/white"
            android:hint="@string/enter_code_here"
            android:inputType="number"
            android:textColorHint="#871010"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/R_btn"
        android:hint="@string/register_btn"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:textColorHint="#cccccc"
        android:textSize="20sp"
        app:backgroundTint="@color/continuebtn" />
</LinearLayout>
</ScrollView>