<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="60dp"
        tools:context=".phone_NActivity2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_your_phone_number"
            android:textColor="#6D59EA"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:text="@string/please_enter_your_number_to_create_a_new_texter_accout"
            android:textColor="#CACACA"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_id"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneN_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingStart="5dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continuebtn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/continue1"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:textColorHint="#cccccc"
            android:textSize="15sp"
            app:backgroundTint="@color/continuebtn" />
    </LinearLayout>
</ScrollView>